[metadata]
name = agama
author = Eugene Vasiliev
author_email = 
description = 
long_description = file: README
license = 
license_file = LICENSE
python_requires = ">=3.8"

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.20
    packaging
python_requires = >=3.8
setup_requires =
    setuptools_scm
    extension-helpers
    wheel
